# edudist

./: .gitignore  Makefile.am  README.md  configure.ac
doc/: Doxyfile
src/: main.c
src/database/: configuration.c  configuration.h  files.c  files.h  installation.c  installation.h  packages.c  packages.h  repositories.c  repositories.h
src/datatypes/: configuration.h  file.h  http_response.c  http_response.h  list.c  list.h  map.c  map.h  package.c  package.h  repository.c  repository.h
src/filesystem/: library.c  library.h
src/gui/: mainwindow.c  mainwindow.h  packages_tab.c  packages_tab.h  repositories_tab.c  repositories_tab.h
src/high/: command.c  command.h
src/misc/: datetime.c  datetime.h  strings.c  strings.h
src/network/: http.c  http.h
src/packagers/: zip.c  zip.h
src/parsers/: common.c  common.h  configuration.c  configuration.h  package.c  package.h  repository.c  repository.h  uri.c  uri.h
